Clean up code: make final, use Java 17 constructs, clean .toString() etc